# Cypress

./: .gitignore
Docs/: cfb27-protocol-discovery.md
Docs/superpowers/plans/: 2026-07-05-cfb27-offline-private-server.md  2026-07-16-cfb27-blaze-framing-and-capture-analyzer.md  2026-07-17-cfb27-protossl-verify-path.md
Docs/superpowers/specs/: 2026-07-05-cfb27-offline-private-server-design.md  2026-07-16-cfb27-blaze-framing-and-capture-analyzer-design.md  2026-07-17-cfb27-protossl-verify-path-design.md
Launcher/: CypressLauncher.csproj
Launcher/CypressLauncher/: CFB27DiscoveryCapture.cs  CFB27EndpointExperiment.cs  MessageHandler.Core.cs  MessageHandler.Data.cs  MessageHandler.Diagnostics.cs  MessageHandler.Init.cs  MessageHandler.Launch.cs  MessageHandler.Translations.cs  MessageHandler.Update.cs  PatchCli.cs  PatchManager.cs  Program.cs  ResourceBuilder.cs
Launcher/assets/translations/: check-translations.ps1  en-US.json  es-419.json  zh-CN.json  zh-HK.json
Launcher/patches/bfn/__Installer/: Cleanup.dat.xdelta  Cleanup.exe.xdelta  Touchup.dat.xdelta  Touchup.exe.xdelta
Launcher/wwwroot/: index.html
Launcher/wwwroot/js/: actions.js  auth.js  browser.js  core.js  data.js  i18n.js  init.js  instances.js  moderator.js  pickers.js  playlist.js  relay.js  serverinfo.js  tabs.js
Server/: CMakeLists.txt  dllmain.cpp  pch.h
Server/Source/Anticheat/: ClientLevelLoadingProtection.cpp  PlayerSpawnListener.cpp  ServerEventSyncListener.cpp  ServerSettingEntityListener.cpp  StreamManagerMessageHook.cpp
Server/Source/CFB27/: BridgeBootstrap.cpp  BridgeConfig.cpp  BridgeLog.cpp  MemoryDiscovery.cpp  PatternScanner.cpp  RedirectorHook.cpp
Server/Source/Core/: Program.cpp  Server.cpp
Server/Source/GameHooks/: fbClientHooks.cpp  fbServerHooks.cpp  fbServerHooks.h
Server/Source/GameModules/: BFNModule.cpp  CFB27Module.cpp
Server/Tests/: CFB27BridgeTests.cpp
Server/include/: SideChannel.cpp  SideChannel.h
Server/include/CFB27/: BridgeBootstrap.h  BridgeConfig.h  BridgeLog.h  MemoryDiscovery.h  PatternScanner.h  RedirectorHook.h
Server/include/Cypress/Core/: Config.h  Server.h
Server/include/Cypress/Presence/: GW2PresenceManager.h
Server/include/GameModules/: CFB27Module.h
Server/include/fb/Engine/: Message.h  ServerConnection.h  ServerPlayer.h
tools/cypress-servers/: build.ps1  go.mod  go.sum
tools/cypress-servers/cmd/cfb27blaze/: main.go
tools/cypress-servers/cmd/cfb27capture/: main.go  main_test.go
tools/cypress-servers/cmd/cfb27gateway/: main.go
tools/cypress-servers/cmd/dynasty/: main.go
tools/cypress-servers/cmd/relay/: main.go
tools/cypress-servers/deploy/: cfb27-endpoints.example.json  cfb27-private.example.json  disasm-exe.js  disasm-runtime-code.js  disasm-runtime-code.py  disassembly-exe.txt  disassembly.txt  run-cfb27-private.ps1  run-host-nogame.bat  start-cfb27-private-host.ps1  stop-cfb27-private-host.ps1
tools/cypress-servers/internal/blaze/: frame.go  frame_test.go  tdf.go  tdf_test.go
tools/cypress-servers/internal/cfb27blaze/: dynasty_client.go  dynasty_client_test.go  handlers.go  service.go  service_test.go  tls.go  tls_test.go
tools/cypress-servers/internal/cfb27capture/: pcap.go  pcap_test.go
tools/cypress-servers/internal/cfb27gateway/: service.go
tools/cypress-servers/internal/dynasty/: catalog.go  catalog_test.go  service.go  service_test.go
tools/cypress-servers/internal/master/: cfb27_test.go  identity.go  master.go
